# Heliora

./: Heliora项目方案.md  大模型记忆实现方案.md
heliora_backend/: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
heliora_backend/.data/: task_events.db  task_registry.db
heliora_backend/.release-reports/: cutover_observation_window_vm_20260405_124617.md  cutover_observation_window_vm_20260405_131101.md  cutover_t0_smoke_vm_20260405_120029.md  rehearse_task_persistence_cutover_rollback_vm.md  release_preflight_20260405_013805.md  release_preflight_20260405_013924.md  release_preflight_20260405_015756.md  release_preflight_20260405_101918.md  release_preflight_20260405_130437.md  release_preflight_20260405_131017.md  run_task_persistence_pg_matrix_vm.md
heliora_backend/app/: __init__.py  main.py
heliora_backend/app/api/: deps.py  router.py
heliora_backend/app/core/: __init__.py  config.py  errors.py  response.py  trace.py
heliora_backend/scripts/: bootstrap_dev.sh  check_services.sh  preflight_release_window_vm.sh  rehearse_task_persistence_cutover_rollback_vm.sh  run_task_persistence_pg_matrix_vm.sh  smoke_api.sh  smoke_rabbitmq_retry.sh  start_api_bg.sh  start_worker_bg.sh  stop_api.sh  stop_worker.sh  task_consumer_daemon.py  validate_env_consistency.py  verify_task_persistence_pg_vm.sh
heliora_backend/tests/: test_chat.py  test_config_paths.py  test_health.py  test_memory.py  test_task_consumer_daemon.py  test_task_routing.py  test_tasks_rabbitmq_e2e.py  test_tasks_submit.py
配置过程/: D2测试1_260401.md  执行修订1.md  (+7 more)
(+79 files in other folders)
